# car_control

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codegenerator.yaml
car_control/: CMakeLists.txt
car_control/fidl/: carcontrol.fdepl  carcontrol.fidl
car_control/include/: GamePad.hpp
car_control/scripts/: Run_Client.sh
car_control/src/: CarControlClient.cpp  CarControlService.cpp  GamePad.cpp
car_control/src-gen/core/v0/commonapi/: CarControl.hpp  CarControlProxy.hpp  CarControlProxyBase.hpp  CarControlStub.hpp  CarControlStubDefault.hpp
car_control/src-gen/someip/v0/commonapi/: CarControlSomeIPCatalog.json  CarControlSomeIPDeployment.cpp  CarControlSomeIPDeployment.hpp  CarControlSomeIPProxy.cpp  CarControlSomeIPProxy.hpp  CarControlSomeIPStubAdapter.cpp  CarControlSomeIPStubAdapter.hpp
cmake/: CarControl-someipConfig.cmake.in
fidl/: CanTransceiver.fdepl  CanTransceiver.fidl  CarControl.fdepl  CarControl.fidl  Jetson.fdepl  Jetson.fidl  carcontrol.fdepl  carcontrol.fidl
include/: CanProxy.hpp  CanReceiverProxy.hpp  CarControlStubImpl.hpp  JetsonProxyImpl.hpp  JoyStick.hpp  Joystick.hpp  PiRacer.hpp  ShawnGamePad.hpp
scripts/: Run_Service.sh
src/: CanProxy.cpp  CanReceiverProxy.cpp  CarControlClient.cpp  CarControlService.cpp  CarControlStubImpl.cpp  JetsonProxyImpl.cpp  JoyStick.cpp  PiRacer.cpp  ShawnGamePad.cpp
src-gen/core-trans/v0/commonapi/: CanTransceiver.hpp  CanTransceiverProxy.hpp  CanTransceiverProxyBase.hpp  CanTransceiverStub.hpp  CanTransceiverStubDefault.hpp
src-gen/core/v0/commonapi/: CanTransceiver.hpp  CanTransceiverProxy.hpp  CanTransceiverProxyBase.hpp  CanTransceiverStub.hpp  CanTransceiverStubDefault.hpp  CarControlProxy.hpp  CarControlProxyBase.hpp  CarControlStub.hpp  CarControlStubDefault.hpp  Jetson.hpp  JetsonProxy.hpp  JetsonProxyBase.hpp  JetsonStub.hpp  JetsonStubDefault.hpp
src-gen/someip-trans/v0/commonapi/: CanTransceiverSomeIPCatalog.json  CanTransceiverSomeIPProxy.hpp  CanTransceiverSomeIPStubAdapter.cpp
src-gen/someip/v0/commonapi/: CanTransceiverSomeIPDeployment.cpp  CanTransceiverSomeIPDeployment.hpp  CanTransceiverSomeIPProxy.cpp  CanTransceiverSomeIPStubAdapter.hpp  CarControlSomeIPProxy.cpp  CarControlSomeIPProxy.hpp  CarControlSomeIPStubAdapter.cpp  CarControlSomeIPStubAdapter.hpp  JetsonSomeIPCatalog.json  JetsonSomeIPDeployment.cpp  JetsonSomeIPDeployment.hpp  JetsonSomeIPProxy.cpp  JetsonSomeIPProxy.hpp  JetsonSomeIPStubAdapter.cpp  JetsonSomeIPStubAdapter.hpp
